--- a/style.css
+++ b/style.css
@@ -4,23 +4,12 @@ body {
     padding: 0;
 }
 
-.container {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
 header {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
     background-color: #333;
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
     z-index: 1000;
 }
 
@@ -32,7 +21,7 @@ nav ul {
 }
 
 nav ul li {
-    display: inline;
+    display: inline-block;
     margin-right: 20px;
 }
 
@@ -47,14 +36,12 @@ nav ul li a:hover {
 }
 
 main {
-    padding-top: 40px; /* Adjust for the fixed navbar */
-}
-
-section {
-    margin-bottom: 40px;
+    padding-top: 60px; /* Adjust for the height of the fixed header */
 }
 
 footer {
+    background-color: #333;
+    color: #fff;
     text-align: center;
-    margin-top: 40px;
+    padding: 20px 0;
 }
