--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #000000;
     padding: 10px 0;
     position: fixed;
     width: 100%;
+    height: 80px;
     top: 0;
     z-index: 1000;
 }
