--- a/style.css
+++ b/style.css
@@ -5,13 +5,8 @@ body {
 }
 
 header {
-    background-color: #000000;
+    background-color: #333;
     padding: 10px 0;
-    position: fixed;
-    width: 100%;
-    height: 80px;
-    top: 0;
-    z-index: 1000;
 }
 
 nav ul {
@@ -30,14 +25,16 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 nav ul li a:hover {
-    color: #ffd700;
+    background-color: #555;
 }
 
 main {
-    padding-top: 60px; /* Adjust for the height of the fixed header */
+    padding-top: 60px; /* Adjust for the height of the header */
 }
 
 footer {
