--- a/style.css
+++ b/style.css
@@ -5,9 +5,14 @@ body {
 }
 
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: #333;
     color: #fff;
     padding: 10px;
+    z-index: 1000;
 }
 
 nav ul {
@@ -26,5 +31,14 @@ nav ul li a {
 }
 
 main {
+    padding-top: 60px; /* Adjust for the height of the header */
+}
+
+.section {
+    height: 500px;
     padding: 20px;
+}
+
+.section h2 {
+    margin-bottom: 10px;
 }
