--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    background-color: #333;
+    width: 90%;
+    background-color: #BFBFBF;
     color: #fff;
     padding: 10px;
     z-index: 1000;
