--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #F7EFE5;
 }
 
 .container { 
@@ -14,7 +15,8 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #BFBFBF;
+    height: 1080px;
+    background-color: #F7EFE5;
     color: #fff;
     padding: 10px;
     z-index: 1000;
