--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
     left: 0;
     width: 100%;
     height: 1080px;
-    background-color: #F7EFE5;
+    background-image: url('https://imgur.com/kwyIHoP');
     color: #fff;
     padding: 10px;
     z-index: 1000;
