--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 1080px;
-    background-image: url('https://imgur.com/kwyIHoP');
+    height: 100%;
+    background-image: url('IMG_5003.jpeg');
     color: #fff;
     padding: 10px;
     z-index: 1000;
