--- a/style.css
+++ b/style.css
@@ -11,14 +11,12 @@ body {
 }
 
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background-image: url('IMG_5003.jpeg');
     color: #fff;
-    padding: 10px;
+    padding: 40px;
+    font-size: 50%larger;
     z-index: 1000;
 }
 
@@ -40,7 +38,8 @@ nav ul li a {
 main {
   padding: 20px;
 }
-
+footer {
+    
 
 .section {
     height: 500px;
