--- a/style.css
+++ b/style.css
@@ -10,6 +10,30 @@ body {
     margin: 0 auto;
 }
 
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.navbar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
 header {
     width: 100%;
     height: 100%;
