--- a/style.css
+++ b/style.css
@@ -21,8 +21,7 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: fixed;
-  z-index: -1;
+  position: relative;
 }
 
 /* Place text in the middle of the image */
