--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: url(AMOQz46as3KIBPeWgnA9kuYMUg.ttf);
     margin: 0;
     padding: 0;
     background-color: #F7EFE5;
