--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: url(AMOQz46as3KIBPeWgnA9kuYMUg.ttf);
+    font-family: Arial,sans serif;
     margin: 0;
     padding: 0;
     background-color: #F7EFE5;
@@ -35,7 +35,7 @@ body, html {
 }
 
 .navbar {
-  background-color: #333;
+  background-color: #FFFCF5;
   overflow: hidden;
   position: fixed;
   bottom: 0;
@@ -43,10 +43,10 @@ body, html {
 }
 .navbar a {
   float: left;
-  display: block;
-  color: #f2f2f2;
+  display: text;
+  color: #2B2B2B;
   text-align: center;
-  padding: 14px 16px;
+  padding: 80px 20px;
   text-decoration: none;
   font-size: 30px;
 }
@@ -58,42 +58,3 @@ body, html {
   background-color: #04AA6D;
   color: white;
 }
-
-.content {
-  padding: 16px;
-}
-
-/* The sticky class is added to the navbar with JS when it reaches its scroll position */
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-  padding-top: 60px;
-}
-    
-body, html {
-  height: 100%;
-}
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-main {
-  padding: 20px;
-}
-
