--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body, html {
   color: black;
 }
 .navbar a.active {
-  background-color: #FFFCF5;
+  background-color: #3004aa;
   color: white;
 }
+
