--- a/style.css
+++ b/style.css
@@ -42,11 +42,9 @@ body, html {
   width: 100%;
 }
 .navbar a {
-  float: center;
-  display: text;
   color: #2B2B2B;
   text-align: center;
-  padding: 16px 16px;
+  padding: 40px;
   text-decoration: none;
   font-size: 30px;
 }
