--- a/style.css
+++ b/style.css
@@ -56,7 +56,9 @@ body, html {
 .content{
     color: #2B2B2B;
     padding: 40px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 100px;
     font-size: 20px;
-    width: 70%;
 }
 
