--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
     font-family: Arial,sans serif;
     background-color: #F7EFE5;
+    margin: 0px;
+    padding: 0px;
+}
+
+body, html {
+    height: 100%;
 }
 
 
