--- a/style.css
+++ b/style.css
@@ -62,3 +62,15 @@ body, html {
     font-size: 20px;
 }
 
+td {
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+table {
+    padding: 20px;
+}
+    
+
