--- a/style.css
+++ b/style.css
@@ -78,5 +78,17 @@ table {
     margin: auto;
     width: 80%;
 }
-    
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.sticky + content {
+    padding-top: 60px;
+}
+
+
+
 
