--- a/style.css
+++ b/style.css
@@ -30,16 +30,13 @@ body, html {
   color: white;
 }
 
-.navbar {
+#navbar {
   background-color: #FFFCF5;
   overflow: hidden;
-  position: fixed;
-  bottom: 0;
   width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-
 .navbar a {
   color: #2B2B2B;
   text-align: center;
