--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  background-attachment: fixed;
 }
 
 /* Place text in the middle of the image */
