--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ body, html {
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 58%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  font-size: 40px;
 }
 
 #navbar {
