--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @font-face {
-      font-family: FirstFont;
-  src: url(AMOQz46as3KIBPeWgnA9kuYMUg.ttf);
+      font-family: Kulim;
+      src: url(AMOQz46as3KIBPeWgnA9kuYMUg.ttf);
+      font-family: KulimParkLight;
+
 }
 
 body {
