--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
       font-family: Kulim;
       src: url(AMOQz46as3KIBPeWgnA9kuYMUg.ttf);
       font-family: KulimParkLight;
-
+      src: url(kulimpark-extralight.tff);
 }
 
 body {
