--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @font-face {
       font-family: Kulim;
       src: url(AMOQz46as3KIBPeWgnA9kuYMUg.ttf);
+}
+@font-face {
       font-family: KulimParkLight;
       src: url(kulimpark-extralight.tff);
 }
