--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @font-face {
       font-family: Kulim;
       src: url(AMOQz46as3KIBPeWgnA9kuYMUg.ttf);
-      font-family: KulimParkLight;
-      src: url(kulimpark-extralight.tff);
 }
 
 body {
@@ -17,7 +15,7 @@ body, html {
 }
 
 p{
-      font-family: KulimParkLight;
+      font-family: Kulim;
       color: #36333E;
 }
 
