--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ p{
 .hero-image {
   background-image: url(IMG_5003.jpeg);
   height: 100%;
-  width: 100%
+  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
