--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 @font-face {
       font-family: Kulim;
       src: url(AMOQz46as3KIBPeWgnA9kuYMUg.ttf);
@@ -10,7 +14,6 @@ body {
 
 body, html {
     height: 100%;
-
 }
 
 p{
@@ -33,6 +36,7 @@ p{
 .hero-text {
   text-align: center;
   position: absolute;
+  width: 90%
   top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -45,14 +49,12 @@ p{
 
 #cassidy {
     color: #36333E;
-    padding-right: 8px;
+    padding-right: 10px;
 }
 
 #stagnitti {
     color: #F7EFE5;
-    padding-left: 8px;
 }
-
 
 #navbar {
   background-color: #FFFCF5;
