--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ p{
 .hero-text {
   text-align: center;
   position: absolute;
-  width: 90%
+  width: 90%;
   top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
