--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ h1, h2 {
 }
 #navbar a {
   color: #2B2B2B;
+  font-family: Koulen;
   text-align: center;
   padding: 40px;
   text-decoration: none;
@@ -81,6 +82,20 @@ h1, h2 {
 }
 
 #navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#navbar b {
+  color: #2B2B2B;
+  font-family: Kulim;
+  text-align: center;
+  padding: 20px;
+  text-decoration: none;
+  font-size: 23px;
+}
+
+#navbar b:hover {
   background-color: #ddd;
   color: black;
 }
