--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1, h2 {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 60px;
+  font-size: 4em;
 }
 #cassidy, #stagnitti {
     display: inline
