--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ h1, h2 {
   font-size: 1.25em;
   text-align: right;
   color: #2B2B2B;
-  padding: 30px
+  padding: 30px;
   text-decoration: none;
   
 }
