--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h1, h2 {
 .hero-image {
   background-image: url(IMG_5003.jpeg);
   height: 100vh;
-  width: 100vw;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
