--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ h2 {
   color: #F7EFE5;
   margin-top: 0;
   padding-top: 0;
-  text-align: right;
-  margin-left: 10%
+  text-align: left;
+  margin-left: 50%;
 }
 
 
