--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h2 {
   background-color: #FFFCF5;
   overflow: hidden;
   width: 100%;
-  padding-top: 1.5pem;
+  padding-top: 1.5em;
   padding-bottom: 1.5em;
 }
 .nav-title a {
