--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ h2 {
   color: #2B2B2B;
   font-family: Koulen;
   text-align: left;
-  padding: 1.5em;
+  padding: 1em;
   text-decoration: none;
   font-size: 3em;
 }
@@ -99,7 +99,7 @@ h2 {
   font-size: 2.25em;
   text-align: center;
   color: #2B2B2B;
-  padding: 1em;
+  padding: .75em;
   text-decoration: none;
   
 }
