--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ h2 {
   font-size: 2vw;
   text-align: center;
   color: #2B2B2B;
-  padding: .75em;
+  padding: 1vw;
   text-decoration: none;
   
 }
