--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ h2 {
   background-color: #FFFCF5;
   overflow: hidden;
   width: 100%;
-  padding-top: 1.5em;
-  padding-bottom: 1.5em;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
 }
 .nav-title a {
   color: #2B2B2B;
