--- a/style.css
+++ b/style.css
@@ -123,7 +123,11 @@ h2 {
   width: 80%;
   height: auto;
   align: center;
-  
+}
+
+p.projectTitle {
+  width: 100%;
+  background-color: #CCD8D8;
 }
 
 .overlay {
