--- a/style.css
+++ b/style.css
@@ -126,8 +126,11 @@ h2 {
 }
 
 #projectTitle {
-  width: 100%;
+  width: 80%;
   background-color: #CCD8D8;
+  align: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .overlay {
