--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ h2 {
 #projectTitle {
   width: 80%;
   background-color: #CCD8D8;
-  align: center;
+  text-align: center;
   padding-top: 5%;
   padding-bottom: 5%;
 }
