--- a/RWD.css
+++ b/RWD.css
@@ -1,3 +1,61 @@
+html {
+  scroll-behavior: smooth;
+}
+
+@font-face {
+      font-family: Koulen;
+      src: url(AMOQz46as3KIBPeWgnA9kuYMUg.ttf);
+}
+
+@font-face {
+  font-family: Kulim;
+  src: url(KulimPark-ExtraLight.ttf);
+}
+
+.hero-image {
+  background-image: url(IMG_5003.jpeg);
+  height: 40vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  background-attachment: fixed;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  width: 70vw;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 4vw;
+}
+
+#cassidy, #stagnitti {
+    display: inline;
+    padding-bottom: 0;
+}
+
+#cassidy {
+    color: #36333E;
+    padding-right: 2vw;
+}
+
+#stagnitti {
+    color: #F7EFE5;
+}
+
+#PMD {
+  color: #F7EFE5;
+  margin-top: 0;
+  padding-top: 0;
+  text-align: left;
+  margin-left: 40%;
+}
+
+
 
 
 /* For mobile phones: */
@@ -36,3 +94,5 @@
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
 }
+
+
