--- a/RWD.css
+++ b/RWD.css
@@ -55,7 +55,52 @@ html {
   margin-left: 40%;
 }
 
+#navbar {
+  background-color: #FFFCF5;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+}
+.nav-title a {
+  color: #2B2B2B;
+  font-family: Koulen;
+  text-align: left;
+  padding: 1em;
+  text-decoration: none;
+  font-size: 3vw;
+}
 
+.nav-content a{
+  font-family: Kulim;
+  font-size: 2vw;
+  text-align: center;
+  color: #2B2B2B;
+  padding: 2vw;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 600px) {
+  .nav-content {display: none;}
+  .nav-content a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .nav-content.responsive {position: relative;}
+  .nav-content.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .nav-content.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 
 
 /* For mobile phones: */
