--- a/RWD.css
+++ b/RWD.css
@@ -81,20 +81,38 @@ html {
 }
 
 @media screen and (max-width: 600px) {
+47 minutes ago
+
+Update RWD.css
   .nav-content a {display: none;}
+2 hours ago
+
+Update RWD.css
   .nav-content a.icon {
     float: right;
+47 minutes ago
+
+Update RWD.css
     display: block; 
+2 hours ago
+
+Update RWD.css
   }
 }
 
 @media screen and (max-width: 600px) {
-  .responsive {position: relative;}
-  .responsive .icon {
+  .nav-content.responsive {position: relative;}
+  .nav-content.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
+  .nav-content.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
   .nav-content.responsive a {
     float: none;
     display: block;
