--- a/RWD.css
+++ b/RWD.css
@@ -80,45 +80,32 @@ html {
   text-decoration: none;
 }
 
+.icon {
+  display: none;
+}
+
 @media screen and (max-width: 600px) {
-47 minutes ago
-
-Update RWD.css
   .nav-content a {display: none;}
-2 hours ago
-
-Update RWD.css
   .nav-content a.icon {
     float: right;
-47 minutes ago
-
-Update RWD.css
-    display: block; 
-2 hours ago
-
-Update RWD.css
+    display: block;
   }
 }
-
 @media screen and (max-width: 600px) {
-  .nav-content.responsive {position: relative;}
-  .nav-content.responsive .icon {
+  .responsive {position: relative;}
+  .responsive .icon {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 1.5vh;
+    padding: 10px;
   }
-  .nav-content.responsive a {
+  .responsive a {
     float: none;
     display: block;
     text-align: left;
   }
 }
-  .nav-content.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
+
 
 
 /* For mobile phones: */
