--- a/RWD.css
+++ b/RWD.css
@@ -12,6 +12,25 @@ html {
   src: url(KulimPark-ExtraLight.ttf);
 }
 
+body,html {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  width: 100%; 
+  background-color: #F7EFE5;;
+}
+
+.content{
+    color: #2B2B2B;
+    padding: 40px;
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 20px;
+    text-align: center;
+}
+
 .hero-image {
   background-image: url(IMG_5003.jpeg);
   height: 40vh;
@@ -31,6 +50,10 @@ html {
   transform: translate(-50%, -50%);
   color: white;
   font-size: 4vw;
+}
+@media only screen and (min-width: 1100px) {
+  .hero-image {height: 85vh;}
+  .hero-text {font-size: 5vw; width: 90%}
 }
 
 #cassidy, #stagnitti {
