--- a/RWD.css
+++ b/RWD.css
@@ -27,8 +27,24 @@ body {
     padding: 40px;
     margin-left: 10%;
     margin-right: 10%;
-    font-size: 20px;
-    text-align: center;
+    font-size: 1.4em;
+    text-align: left;
+    font-family: kulim;
+}
+
+h2{
+  font-family: koulen;
+  font-size: 4vw;
+   text-align: center;
+}
+
+td {
+  padding: 2vw;
+  background-color: #CCD8D8;
+  text-align: center;
+  border-color: #F7EFE5;
+  border: solid #F7EFE5 1.5vw;
+  width: 20%;
 }
 
 .hero-image {
@@ -51,11 +67,11 @@ body {
   color: white;
   font-size: 4vw;
 }
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 900px) {
   .hero-image {height: 85vh;}
   .hero-text {font-size: 5vw; width: 90%}
 }
-@media only screen and (min-width: 2000px) {
+@media only screen and (min-width: 1400px) {
   .hero-image {height:100%}
 }
 
